After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777304 - sometimes recipes are not shown in 'Cuisines'
sometimes recipes are not shown in 'Cuisines'
Status: RESOLVED FIXED
Product: recipes
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Recipes maintainer(s)
Recipes maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-01-16 06:30 UTC by Mohammed Sadiq
Modified: 2017-01-17 11:42 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mohammed Sadiq 2017-01-16 06:30:30 UTC
Sometimes recipes are not listed in Cuisines tab. This bug isn't always reproducible though.

How to reproduce:
1. Open Recipes -> select 'Cuisines' tab
2. Select 'American' which would list several items
3. Press back button so that the Cuisines page is shown
4. Now Click on 'Turkish'

Result:
No items are shown for Desserts though there is one. This item is shown once there is a focus change (alt+Tab, or so)
Comment 1 Matthias Clasen 2017-01-16 16:23:06 UTC
I confirm. Not exactly clear what is going on. Debugging needed