cuisine page: Defer scrolling to an idle

This avoids problems when switching between different cuisines.
We also avoid some unnecessary inefficiency by providing direct
links from the sidebar items to the content.

https://bugzilla.gnome.org/show_bug.cgi?id=777304